# CppBasics

./: .gitignore  CMakeLists.txt  README.md
Exercise1/: CMakeLists.txt  main  main.cpp
Exercise1/include/: Vector.cpp  Vector.hpp  int_stack.cpp  int_stack.hpp
Exercise17/: CMakeLists.txt  Main.cpp
Exercise17/include/: circle.cpp  circle.hpp  geometric_figure.hpp  polygon.cpp  polygon.hpp  quadrilateral.cpp  quadrilateral.hpp  rectangle.cpp  rectangle.hpp  square.cpp  square.hpp  triangle.cpp  triangle.hpp
Solutions/Ex06/: Vector.cpp  Vector.h  ex6.cpp
Solutions/Ex07/: ex7.cpp  int_stack.cpp  int_stack.h
Solutions/Ex08/: ex8.cpp  pair_vect.cpp  pair_vect.h  vector.cpp  vector.h
Solutions/Ex09/: ex9.cpp  point.cpp  point.h
Solutions/Ex10/: ex10.cpp  int_stack.cpp  int_stack.h
